# reversi

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  PLAN.md  README.md  bootstrap-prompt.txt  justfile
.github/workflows/: ci.yml  deploy.yml
crates/app/: Cargo.toml
crates/app/examples/: lobby_frame.rs  login_frame.rs
crates/app/src/: anim.rs  config.rs  egui_layer.rs  game.rs  game_msg.rs  gpu.rs  input.rs  lib.rs  lobby.rs  login.rs  main.rs  net.rs  session.rs
crates/eval/: Cargo.toml
crates/eval/examples/: matchup.rs
crates/eval/src/: heuristic.rs  lib.rs  matchup.rs
crates/eval/tests/: corner.rs  strength.rs
crates/game-core/: Cargo.toml
crates/game-core/examples/: selfplay.rs
crates/game-core/src/: board.rs  cell.rs  evaluator.rs  lib.rs  player.rs  rng.rs  search.rs  selfplay.rs  square.rs
crates/game-core/tests/: perft.rs
crates/netplay-client/: Cargo.toml
crates/netplay-client/src/: auth.rs  lib.rs
crates/netplay-client/tests/: auth.rs
crates/netplay-protocol/: Cargo.toml
crates/netplay-protocol/src/: lib.rs
crates/netplay-server/: Cargo.toml
crates/netplay-server/migrations/: 0001_create_users.sql  0002_create_sessions.sql
crates/netplay-server/src/: admin.rs  auth.rs  lib.rs  limits.rs  lobby.rs  main.rs  openapi.rs  player.rs  rest.rs  store.rs
crates/netplay-server/tests/: relay.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/render/: Cargo.toml
crates/render/examples/: frame.rs
crates/render/src/: board_view.rs  lib.rs  offscreen.rs  quad.rs  renderer.rs  shader.wgsl
crates/server/: Cargo.toml
crates/server/src/: lib.rs  lobby.rs  main.rs
crates/server/tests/: relay.rs
deploy/: README.md
deploy/ansible/: inventory.ini  playbook.yml
deploy/ansible/templates/: netplay-server.service.j2  netplay.env.j2
