[workspace]
resolver = "2"
members = [
    "crates/game-core",
    "crates/eval",
    "crates/render",
    "crates/app",
    "crates/protocol",
    "crates/server",
]

# Metadata shared by every crate in the workspace. Individual crates inherit
# these with `x.workspace = true` so the values live in exactly one place.
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# Internal crates are referenced by path so the dependency direction is explicit
# and enforced by cargo: app -> {render, eval} -> game-core, never the reverse.
[workspace.dependencies]
game-core = { path = "crates/game-core" }
eval = { path = "crates/eval" }
render = { path = "crates/render" }
protocol = { path = "crates/protocol" }

# Networking (Stage 7). The wire protocol is shared by the client and the relay
# server via serde. tokio is used by the server only — the client stays
# async-free (blocking TCP on a background thread).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros"] }

# Graphics/windowing stack (Stage 4). Pinned once here so every crate agrees on
# a version — wgpu and winit must share the same raw-window-handle generation.
wgpu = "0.20"
winit = "0.30"
# egui 0.28's egui-wgpu matches our wgpu 0.20. We deliberately do NOT use
# egui-winit (it pins winit 0.29, conflicting with our winit 0.30); instead we
# hand-feed egui input from our own winit 0.30 events.
egui = "0.28"
egui-wgpu = "0.28"
pollster = "0.3"                                          # block_on for wgpu's few async calls (no async runtime)
bytemuck = { version = "1", features = ["derive"] }      # cast POD structs to GPU byte buffers, no unsafe
image = { version = "0.25", default-features = false, features = ["png"] }  # encode target/frame.png
