[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true

# winit shell: the only crate that may touch windowing. Wires the others
# together. This is the binary the player runs (`just run`).
[dependencies]
game-core.workspace = true
eval.workspace = true
render.workspace = true
protocol.workspace = true
wgpu.workspace = true
winit.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
pollster.workspace = true

[dev-dependencies]
# For the offscreen lobby-mockup example (`just lobby-frame`) PNG readback.
image.workspace = true
