[package]
name = "netplay-client"
version.workspace = true
edition.workspace = true
license.workspace = true

# Reusable client transport for the netplay layer: a blocking TCP connection on
# a background thread that feeds decoded events into a winit event loop. The game
# supplies and interprets the opaque game payload; this crate has no game logic.
[dependencies]
netplay-protocol.workspace = true
winit.workspace = true
# WebSocket over TLS (wss://), on a tokio runtime confined to the network thread.
# The winit event loop stays synchronous; this runtime never touches it.
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
