[package]
name = "netplay-client"
version.workspace = true
edition.workspace = true
license.workspace = true

# Reusable client transport for the netplay layer: a WebSocket connection on a
# tokio runtime confined to a background thread that feeds decoded events into a
# winit event loop. The game supplies and interprets the opaque game payload;
# this crate has no game logic.
[dependencies]
netplay-protocol.workspace = true
winit.workspace = true
# The auth credential is arbitrary JSON the server interprets.
serde_json.workspace = true
# WebSocket over TLS (wss://), on a tokio runtime confined to the network thread.
# The winit event loop stays synchronous; this runtime never touches it.
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
# rustls 0.23 requires a crypto provider be selected explicitly. We enable the
# `ring` provider here and install it as the process default (see lib.rs) so the
# wss:// handshake doesn't panic looking for one.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
