[package]
name = "netplay-client"
version.workspace = true
edition.workspace = true
license.workspace = true

# Reusable client transport for the netplay layer: a WebSocket connection on a
# tokio runtime confined to a background thread that feeds decoded events into a
# winit event loop. The game supplies and interprets the opaque game payload;
# this crate has no game logic.
[dependencies]
netplay-protocol.workspace = true
winit.workspace = true
serde_json.workspace = true
serde = { version = "1", features = ["derive"] }
# WebSocket over TLS (wss://), on a tokio runtime confined to the network thread.
# The winit event loop stays synchronous; this runtime never touches it.
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
# REST auth: log in / register → bearer token (presented in the WS Hello). ureq is
# blocking (the auth call runs on the network thread before the async WS loop) and
# uses rustls + ring — matching the WebSocket path, no OpenSSL, no aws-lc C build.
ureq = { version = "2", features = ["json"] }
# rustls 0.23 requires a crypto provider be selected explicitly. We enable the
# `ring` provider here and install it as the process default (see lib.rs) so the
# wss:// handshake doesn't panic looking for one.
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
# Integration-test the auth SDK against a real relay (one-directional: the server
# never depends on the client).
netplay-server = { path = "../netplay-server" }
tokio = { workspace = true, features = ["rt", "net"] }
tempfile = "3"
