[package]
name = "netplay-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

# Game-agnostic wire protocol for the netplay layer: framing, the lobby/match
# envelope, and an opaque game payload the server never decodes. Depends only on
# serde — no game logic, so the server never pulls in a game.
[dependencies]
serde.workspace = true
serde_json.workspace = true
