[package]
name = "netplay-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

# Game-agnostic wire protocol for the netplay layer: framing, the lobby/match
# envelope, and an opaque game payload the server never decodes. Depends only on
# serde — no game logic, so the server never pulls in a game.
[dependencies]
serde.workspace = true
serde_json.workspace = true
# JSON Schema generation for the self-describing `/schema` endpoint. Optional so
# the client doesn't carry it — only the server enables `schema`.
schemars = { version = "0.8", optional = true }

[features]
# Derive JSON Schema for the wire types and expose `service_descriptor()`.
schema = ["dep:schemars"]
