[package]
name = "netplay-server"
version.workspace = true
edition.workspace = true
license.workspace = true

# Reusable relay/matchmaking server. Pairs two clients and forwards their game
# messages opaquely. Uses tokio; depends on `netplay-protocol` only — no game
# logic, so any 2-player turn-based game can use it as-is.
[dependencies]
netplay-protocol.workspace = true
tokio.workspace = true
# Plain WebSocket (no TLS — the deploy proxy terminates TLS and forwards ws://).
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

[dev-dependencies]
# The relay test drives the server over WebSocket.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
