[package]
name = "netplay-server"
version.workspace = true
edition.workspace = true
license.workspace = true

# Reusable relay/matchmaking server. Pairs two clients and forwards their game
# messages opaquely. Uses tokio; depends on `netplay-protocol` only — no game
# logic, so any 2-player turn-based game can use it as-is.
[dependencies]
# `schema` pulls in schemars for the self-describing `/schema` endpoint.
netplay-protocol = { workspace = true, features = ["schema"] }
tokio.workspace = true
# Opaque credentials are arbitrary JSON the authenticator interprets.
serde.workspace = true
serde_json.workspace = true
# A minimal HTTP/1 front (hyper) serves `GET /schema` and upgrades `/` to a
# plain WebSocket (hyper-tungstenite). No TLS — the deploy proxy terminates it
# and forwards ws://. We use hyper-tungstenite's re-exported tungstenite types
# so the WebSocket version always matches the upgrade machinery.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
hyper-tungstenite = "0.30"
http-body-util = "0.1"
bytes = "1"
# Names the post-upgrade WebSocketStream / Message types (version matched to
# hyper-tungstenite). We don't do the handshake ourselves — hyper does.
tokio-tungstenite = { version = "0.30", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
# Persistent state (accounts, roles). SQLite is bundled (compiled from source),
# so no system libsqlite3 — the static-musl deploy build needs only musl-tools.
# Migrations are embedded at build time and run on startup; runtime query API
# (no compile-time DB), so CI needs no database.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
# Account passwords are argon2id-hashed (pure Rust → musl-clean; salt embedded).
# `std` pulls in getrandom so `OsRng` is available for salt generation.
argon2 = { version = "0.5", features = ["std"] }
# Authorizing an account needs an async DB lookup, so the Authenticator trait is
# async; async-trait makes it work behind `Arc<dyn Authenticator>`.
async-trait = "0.1"

[dev-dependencies]
# The relay test drives the server over WebSocket (same version as the runtime
# dep, so the test build has a single `tokio_tungstenite`).
tokio-tungstenite = { version = "0.30", default-features = false, features = ["connect", "handshake"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
# Throwaway on-disk SQLite for store tests.
tempfile = "3"
