[package]
name = "render"
version.workspace = true
edition.workspace = true
license.workspace = true

# wgpu sprite/quad batcher and offscreen frame capture. Reads game-core state to
# draw it; no game logic. `image` is used only to encode the offscreen PNG.
[dependencies]
game-core.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
pollster.workspace = true
image.workspace = true
