[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

# Relay/matchmaking server. Pairs two clients and forwards their game messages.
# Uses tokio (the client stays async-free); depends on `protocol` but NOT on
# game logic — it relays messages opaquely.
[dependencies]
protocol.workspace = true
tokio.workspace = true
